# cupola

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  devbox.json
.claude/: settings.json
.claude/commands/cupola/: fix.md  spec-compress.md  spec-design.md  spec-impl.md  spec-init.md  steering.md
.claude/commands/kiro/: spec-design.md  spec-impl.md  spec-init.md  spec-requirements.md  spec-status.md  spec-tasks.md  steering-custom.md  steering.md  validate-design.md  validate-gap.md  validate-impl.md
.cupola/: cupola.toml
.cupola/specs/add-aarch64-release-target/: design.md  requirements.md  research.md  spec.json  summary.md  tasks.md
.cupola/specs/add-cc-sdd-links/: tasks.md  (+4 more)
.cupola/steering/: product.md  structure.md  tech.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  cupola-task.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/claude-settings/: base.json  devbox.json  go.json  python.json  rust.json  typescript.json
docs/adr/: 001-stall-detection-event-handling.md  template.md
docs/architecture/: README.md  data-model.md  effects.md  metadata.md  observations.md  polling-loop.md  signals.md  state-machine.md
docs/commands/: README.md  cleanup.md  compress.md  doctor.md  init.md  logs.md  start.md  status.md  stop.md
docs/tests/: e2e-plan.md  migration-test.md  test-spec.md
locales/: en.yml  ja.yml
migration/: test-spec.md
scripts/e2e/: cupola_e2e.py  fake-claude-fail.sh  run.sh  sweep.sh
src/: lib.rs  main.rs
src/application/: association_guard.rs  cleanup_use_case.rs  compress_use_case.rs  doctor_result.rs  doctor_use_case.rs  error.rs  init_agent.rs  init_task_manager.rs  init_use_case.rs  io.rs  logs_use_case.rs  mod.rs  polling_use_case.rs  prompt.rs  retry_policy.rs  session_manager.rs  start_use_case.rs  stop_use_case.rs  template_manager.rs  transition_use_case.rs
src/bootstrap/: app.rs  config_loader.rs  logging.rs  logs_command.rs  mod.rs  toml_config_loader.rs
src/domain/: author_association.rs  check_result.rs  claude_code_env_config.rs  claude_code_permissions_config.rs  claude_settings.rs  config.rs  decide.rs  decision.rs  effect.rs  event.rs  execution_log.rs  fixing_problem_kind.rs  issue.rs  metadata_update.rs  mod.rs  model_config.rs  phase.rs  process_run.rs  shutdown_mode.rs  state.rs  state_machine.rs  task_weight.rs  world_snapshot.rs
tests/: integration_test.rs  scenarios.rs
tests/migrations/: mod.rs
(+602 files in other folders)
