[package]
name = "cupola"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Issue-driven local agent control plane for spec-driven development"
repository = "https://github.com/kyuki3rain/cupola"
readme = "README.md"
keywords = ["github", "automation", "agent", "claude", "ci"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
rust-i18n = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
gh-token = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
octocrab = "0.44"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tracing-core = "0.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "deny"
